# vote-simulation

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml  zensical.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  publish.yml
config/: simulation.toml
demo/: demo-run_instance.py  demo-ties.py  demo-total_results.py  demo-visualisation_generation.py  run_print_simstep.py  visualisation_generation.py
demo.py/: adding_rule.py  run_print_simstep.py  visualisation_generation.py
demo/results/: UNI_v1001_c3_series.parquet
demo/results/UNI_v1001_c3_i1000/: 1000_series.parquet
demo/rolland-al_sim/: config.toml  simulation.ipynb
demo/simulation/: config.toml  simulation.ipynb
docs/: api.md  co_winners.md  data_generation.md  getting_start.md  index.md  installation.md  rules.md  simulation.md  usage.md
docs/models/: data_instance.md  distance.md  simulation_results.md  total_result.md
src/vote_simulation/: __init__.py  cli.py  simulation.py
src/vote_simulation/models/: __init__.py  simulation_result.py
src/vote_simulation/models/data_generation/: __init__.py  data_instance.py  generator_registry.py
src/vote_simulation/models/distance/: __init__.py  distance.py
src/vote_simulation/models/results/: __init__.py  result_config.py  series_result.py  step_result.py  total_result.py  utils.py
src/vote_simulation/models/rules/: __init__.py  base.py  elimination_based.py  registry.py  rule_baldwin.py  rule_black.py  rule_borda.py  rule_coombs.py  rule_icrv.py  rule_irv.py  rule_iterated_bucklin.py  rule_k_approval.py  rule_majority_judgment.py  rule_schulze.py  rule_star.py  rule_tied_score.py  score_based.py
src/vote_simulation/simulation/: __init__.py  configuration.py  simulation.py
tests/: test_vote_simulation.py
tests/data_gen/: test_generator_registry.py  test_simulation_workflow.py
tests/rules/: simu_UNI_v_101_c_14_i_693.csv  simu_UNI_v_2_c_2_tie.csv  test_registry.py
tests/simulation/: test_configuration.py  test_simulation.py  test_simulation_result.py  test_total_result.py
