[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vote_simulation"
version = "0.1.0"
description = "A framework to compare social choice rules"
readme = "README.md"
authors = [
  {name = "Ambre Laqueuvre", email = "ambre.laqueuvre@gmail.com"}
]
maintainers = [
  {name = "Ambre Laqueuvre", email = "ambre.laqueuvre@gmail.com"}
]
classifiers = [
    "Typing :: Typed",
    # TODO: Add additional classifiers as needed
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "rich",
]
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/Damidas0/vote_simulation/issues"
changelog = "https://github.com/Damidas0/vote_simulation/blob/main/HISTORY.md"
documentation = "https://Damidas0.github.io/vote_simulation/"
homepage = "https://github.com/Damidas0/vote_simulation"

[project.scripts]
vote_simulation = "vote_simulation.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.uv]
package = true
default-groups = ["dev"]
